[tool.poetry]
name = "listener"
version = "0.2.1"
description = ""
authors = ["yuichiroaoki <45054071+yuichiroaoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
websockets = "^11.0.3"
requests = "^2.31.0"
mysql-connector-python = "^8.1.0"
cncmark = {path = "../cncmark"}
cnceye = "^0.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
