[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["yuichiroaoki <45054071+yuichiroaoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.101.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
scipy = "^1.11.1"
cnceye = "^0.4.3"
ping3 = "^4.0.4"
paho-mqtt = "^1.6.1"
requests = "^2.31.0"
smbprotocol = "^1.11.0"
numpy-stl = "^3.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ruff = "^0.0.283"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "server.main:start"