[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["yuichiroaoki <45054071+yuichiroaoki@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = {extras = ["all"], version = "^0.106.0"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
scipy = "^1.11.1"
paho-mqtt = "^1.6.1"
requests = "^2.31.0"
smbprotocol = "^1.11.0"
gunicorn = "^21.2.0"
mysql-connector-python = "^8.2.0"
pyyaml = "^6.0.1"
trimesh = "^4.0.5"
rtree = "^1.1.0"
networkx = "^3.2.1"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
ruff = "^0.1.9"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "server.main:start"